# ECVis

./: .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: python-app.yml
docs/: conf.py  index.rst  introduction.rst  requirements.txt
docs/api/: modules.rst
docs/source/: ecvis.rst  modules.rst
src/ecvis/: emo.py  rank.py
tests/: test_emo.py  test_rank.py
